--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For Pearly ❤️</title>
+  <title>For Pearly Ng ❤️</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -78,10 +78,10 @@
     <h1>Pearly Ng ❤️</h1>
     <p>Will you be my Valentine<br>for the <b>4th time</b>?</p>
 
-    <div class="photos">
-      <img src="photo2.jpg">
-    </div>
-
+    <div class="photo-container">
+  <img src="photo2.jpg" alt="Us ❤️" class="photo">
+</div>
+    
     <button id="musicBtn" onclick="playMusic()">Tap to start ❤️</button>
 
     <div>
@@ -114,4 +114,5 @@
 
 </body>
 </html>
+
 
