--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <!-- AFTER YES -->
 <div id="afterYes">
-  <img src="photo3.jpg" class="big-photo">
+  <img src="photo1.jpg" class="small-photo">
   <div class="final-text">Forever us ❤️</div>
 </div>
 
@@ -120,3 +120,4 @@
 
 </body>
 </html>
+
